--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,15 +6,18 @@
     
     background-position: 50% 100%;
     background-size: cover;
-    height: 100vh;
+    height: 90vh;
+    padding-top: 50px;
+    padding-bottom: 150px;
   }
   .heroBlock .content{
-    width: 650px;
+    /* width: 650px; */
   }
   .heroBlock .btnHolder{
-padding-top: 10px;  }
+}
   .heroBlock .container-fluid {
-    display: block !important;
+    /* display: block !important; */
+
   }
   
   .heroBlock .ant-carousel,
